# gatekeeper-server

./: Dockerfile  Dockerfile.database  Dockerfile.server  README.md  docker-compose.yml  example.env  orchestrate.sh  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 10bd1a4a0c1d_create_initial_tables.py  1463122c59f7_create_intial_tables.py  282b045db77a_create_initial_tables.py  56616a2bc11c_create_initial_tables.py  785b92c4c5c0_create_intial_tables.py  91f2405a43b8_create_initial_tables.py  a6bf2eb27fd0_create_initial_tables.py  b07084386325_create_initial_tables.py  e3c87212f364_create_initial_tables.py  f7b659b1339b_create_initial_tables.py
scripts/: seed.py
src/: __init__.py  server.py
src/api/: __init__.py
src/api/rest/: consumers.py  contexts.py  forms.py  providers.py  sessions.py
src/api/v1/: consumers.py  forms.py  providers.py  sessions.py
src/api/websocket/: chat.py  gateway.py
src/core/: app.py  config.py  database.py  http.py  socket.py
src/data/: intents.json  intents_annoy_index.ann  intents_embeddings.pkl
src/helpers/: auth.py  cache.py  constants.py  events.py  logger.py  model.py  notifier.py  repository.py
src/middlewares/: auth.py  log.py
src/models/: __init__.py  chat.py  consumers.py  context.py  contexts.py  forms.py  providers.py  sessions.py
src/modules/: chat.py
src/repositories/: consumers.py  contexts.py  forms.py  providers.py  sessions.py
src/scripts/: chatbot.py  precompute.py  seed.py
src/services/: chat.py  chatbot.py  consumers.py  forms.py  providers.py  sessions.py
src/services/chatbot/: core.py  helpers.py  precompute.py
src/services/chatbot/data/: intents.json  intents_annoy_index.ann  intents_embeddings.pkl
src/services/chatbot/helpers/: flows.py  precompute.py  session.py  utils.py
src/workers/: chat.py  providers.py
