[project]
name = "gatekeeper-server"
version = "0.1.0"
description = "gatekeeper fastapi server"
authors = [
    { name = "Monarch Maisuriya", email = "monarchmaisuriya@gmail.com" },
]
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
    "python-multipart<1.0.0,>=0.0.7",
    "email-validator>=2.2.0",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "tenacity<9.0.0,>=8.2.3",
    "alembic<2.0.0,>=1.12.1",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "bcrypt==4.0.1",
    "pyjwt<3.0.0,>=2.8.0",
    "greenlet>=3.2.3",
    "aiosmtplib>=4.0.1",
    "python-socketio>=5.13.0",
    "pylint>=3.3.7",
    "aioredis>=2.0.1",
    "aiofiles>=24.1.0",
    "langchain>=0.3.26",
    "langgraph>=0.5.2",
    "langchain-google-genai>=2.1.7",
    "langchain-postgres>=0.0.15",
    "pgvector"
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "pylint>=3.3.7",
]
test = [
    "pytest>=8.4.1",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
seed = "python -m src.scripts.seed"
precompute = "python -m src.scripts.precompute"
dev = """pdm run uvicorn src.server:app --reload --lifespan on --host 0.0.0.0 --port 8080 --log-level debug --forwarded-allow-ips='*' --proxy-headers"""
prod = """pdm run uvicorn src.server:app --lifespan on --host 0.0.0.0 --port 8080 --workers 4 --log-level info --forwarded-allow-ips='*' --proxy-headers"""
migrate-up = "alembic upgrade head"
migrate-down = "alembic downgrade -1"
make-migration = "alembic revision --autogenerate -m \"%(message)s\""
lint = "ruff check ."
lint-fix = "ruff check . --fix"
format = "ruff format ."
test = "pytest"

[tool.ruff]
target-version = "py310"
exclude = [".venv", "alembic"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG001"]
ignore = ["E501", "B008", "W191", "B904"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pdm]
distribution = true
package-dir = {"" = "src"}

[tool.pylint]
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
]
